@@ -80,7 +80,7 @@ public abstract class SeriesAttributes extends LabelledList
     public void setSeriesIndex(int val) { seriesIndex = val; }
                 
     
-    public XYItemRenderer getRenderer()
+    private XYItemRenderer getRenderer()
         {
         return ((XYPlot)getPlot()).getRenderer();
         }
@@ -158,7 +158,7 @@ public abstract class SeriesAttributes extends LabelledList
     public void setPlotVisible(boolean val)
         {
         plotVisible = val;
-        getRenderer().setSeriesVisible(seriesIndex, new Boolean(val));
+        getRenderer().setSeriesVisible(seriesIndex, Boolean.valueOf(val));
         }
         
     public boolean isPlotVisible()
@@ -201,7 +201,7 @@ public abstract class SeriesAttributes extends LabelledList
             public String newValue(String newValue)
                 {
                 SeriesAttributes.this.setSeriesName(newValue);
-                getGenerator().getChartPanel().repaint();
+                rebuildGraphicsDefinitions();
                 return newValue;
                 }
             };
